[package]
name = "seda-cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "seda"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["default"] }
clap_complete = { workspace = true }
clap-markdown = { workspace = true }
dotenv = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
seda-chains = { workspace = true }
seda-common = { workspace = true, features = ["cli"] }
seda-config = { workspace = true, features = ["cli"] }
seda-logger = { workspace = true }
seda-node = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
