[package]
name = "seda-common"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
default = []
cli = ["clap"]

[dependencies]
borsh = { workspace = true }
clap = { workspace = true, optional = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
