[package]
name = "seda-mainchain"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bn254 = { workspace = true }
bs58 = { workspace = true }
getrandom = { workspace = true, features = ["custom"], default-features = false}
rand = {workspace = true, features = ["std"], default-features = false }
hex = { workspace = true }
near-bigint = { workspace = true }
near-contract-standards = { workspace = true }
near-sdk = { workspace = true, features = ["legacy", "unit-testing"] }
near-sys = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true, features = ["std"] }
uint = { workspace = true }
