[package]
name = "seda-crypto"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
bn254 = { workspace = true, features = ["serde"] }
concat-kdf = { workspace = true, features = ["std"] }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ed_rand = { package = "rand", version = "0.7" }
serde_json = { workspace=true, features = ["std"] }