[package]
name = "seda-delegate-cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "seda-delegate"
path = "src/main.rs"

[dependencies]
bn254 = { workspace = true }
bs58 = "0.4.0"
clap = { workspace = true, features = ["default"] }
clap-markdown = { workspace = true }
clap_complete = { workspace = true }
dotenv = { workspace = true }
hex = "0.4"
seda-chains = { workspace = true }
seda-config = { workspace = true, features = ["cli", "delegate-cli"] }
seda-crypto = { workspace = true }
seda-runtime-sdk = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true }