[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = [
	"derive",
	"error-context",
	"help",
	"std",
	"string",
] }
hex = { workspace = true }
seda-common = { workspace = true }
seda-runtime-sdk = { workspace = true, features = ["full", "wasm"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
